# InstagramAutomation

./: .gitignore  LICENSE  README.md  pyvenv.cfg
InstaAutomation/: Makefile  manage.py  pyproject.toml  requirement.txt
InstaAutomation/InstaAutomation/: asgi.py  settings.py  urls.py  wsgi.py
InstaAutomation/images/: Gemini.py  admin.py  forms.py  imgur_upload.py  models.py  urls.py  views.py
InstaAutomation/images/migrations/: 0001_initial.py  0002_alter_image_slug.py  0003_alter_image_datetime.py  0004_alter_image_title.py  0005_image_description.py
InstaAutomation/static/css/: image_create.css  image_home.css  images_detail.css
InstaAutomation/templates/images/: base.html  create.html  delete.html  detail.html  home.html
