[tool.poetry]
name = "instaautomation"
version = "0.1.0"
description = ""
authors = ["thefudgesupreme <vipul.rt99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = ">=3.6.0"
async-generator = ">=1.10"
attrs = ">=22.2.0"
black = ">=23.3.0"
certifi = ">=2022.12.7"
cffi = ">=1.15.1"
charset-normalizer = ">=2.1.1"
click = ">=8.1.3"
colorama = ">=0.4.6"
django = ">=4.1.8"
django-extensions = ">=3.2.1"
django-filter = ">=23.2"
djangorestframework = ">=3.14.0"
djangorestframework-jsonapi = ">=6.0.0"
exceptiongroup = ">=1.1.0"
h11 = ">=0.14.0"
idna = ">=3.4"
inflection = ">=0.5.1"
mypy-extensions = ">=1.0.0"
outcome = ">=1.2.0"
packaging = ">=23.0"
pathspec = ">=0.11.1"
pillow = ">=9.5.0"
platformdirs = ">=3.5.1"
pycparser = ">=2.21"
pysocks = ">=1.7.1"
python-dotenv = ">=0.21.0"
pytz = ">=2023.3"
requests = ">=2.28.2"
selenium = ">=4.8.2"
sniffio = ">=1.3.0"
sortedcontainers = ">=2.4.0"
sqlparse = ">=0.4.4"
tomli = ">=2.0.1"
tqdm = ">=4.64.1"
trio = ">=0.22.0"
trio-websocket = ">=0.9.2"
tzdata = ">=2023.3"
urllib3 = ">=1.26.13"
webdriver-manager = ">=3.8.5"
wsproto = ">=1.2.0"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
